<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActualizarSO">

    <android.support.design.widget.TextInputLayout
            android:layout_width="234dp"
            android:layout_height="67dp"
            app:layout_constraintStart_toEndOf="@+id/lbNombre" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/lbNombre"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="@+id/lbNombre"
            android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/pHNombre" android:textSize="18sp" android:id="@+id/text_Nombre"
                android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:text="@string/lbNombreP"
            android:layout_width="99dp"
            android:layout_height="34dp"
            android:id="@+id/lbNombre" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.165" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/pHpesoGigas"
            android:layout_width="99dp"
            android:layout_height="66dp"
            android:id="@+id/lbPesoGB" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintVertical_bias="0.505" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/pHFecha"
            android:layout_width="99dp"
            android:layout_height="34dp"
            android:id="@+id/lbFecha" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.38" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/pHVersionApi"
            android:layout_width="99dp"
            android:layout_height="34dp"
            android:id="@+id/lbVersionApi" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.272" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lbVersionApi" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/lbVersionApi"
            app:layout_constraintBottom_toBottomOf="@+id/lbVersionApi" android:id="@+id/textInputLayout6"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHVersionApi" android:id="@+id/textVersion" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/lbFecha" app:layout_constraintBottom_toBottomOf="@+id/lbFecha"
            android:id="@+id/textInputLayout5" app:layout_constraintStart_toEndOf="@+id/lbFecha"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHFecha" android:id="@+id/textFecha" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lbPesoGB" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/lbPesoGB" app:layout_constraintBottom_toBottomOf="@+id/lbPesoGB"
            android:id="@+id/textInputLayout4" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHpesoGigas" android:id="@+id/textGB" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <CheckBox
            android:text="@string/lbInstalado"
            android:layout_width="188dp"
            android:buttonTint="@color/blanco"
            android:layout_height="36dp"
            android:id="@+id/checkBox" android:textSize="24sp"
            android:textColor="@color/blanco" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.15"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCrearApp" android:text="@string/crearApp"
            app:layout_constraintEnd_toStartOf="@+id/btnActualizar" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.803"/>
    <Button
            android:text="@string/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnEliminar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCrearApp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/btnCrearApp"
            app:layout_constraintEnd_toEndOf="@+id/btnCrearApp" app:layout_constraintVertical_bias="0.04"/>
    <Button
            android:text="@string/actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnActualizar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="76dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.794"/>
    <Button
            android:text="@string/gestionarApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGestionarApp" app:layout_constraintStart_toStartOf="@+id/btnActualizar"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnActualizar"
            app:layout_constraintEnd_toEndOf="@+id/btnActualizar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.675"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRetorno" app:layout_constraintStart_toStartOf="@+id/btnEliminar"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/btnGestionarApp"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnGestionarApp"/>
</android.support.constraint.ConstraintLayout>