<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:text="@string/lbNombreP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintVertical_bias="0.365" android:id="@+id/lb_NombreP" android:textSize="18sp"
            android:textColor="@color/blanco" android:textStyle="bold"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="145dp"
            android:layout_height="54dp"
            app:layout_constraintStart_toEndOf="@+id/lb_NombreP" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/lb_NombreP"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.329" app:layout_constraintTop_toTopOf="@+id/lb_NombreP"
            app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TextInputEditText
                android:layout_width="134dp"
                android:layout_height="54dp"
                android:hint="@string/placeHNombre" android:id="@+id/inp_Nombre" android:textColor="@color/blanco"
                android:textColorHint="@color/blanco" android:textStyle="bold"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/btnEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_entrar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lb_NombreP"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.211"/>

</android.support.constraint.ConstraintLayout>