<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IngresarApp">

    <TextView
            android:text="@string/pHFecha"
            android:layout_width="99dp"
            android:layout_height="34dp"
            android:id="@+id/lbFecha2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.661" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/costo"
            android:layout_width="99dp"
            android:layout_height="34dp"
            android:id="@+id/lbFecha3" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.782" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/lbNombreP"
            android:layout_width="99dp"
            android:layout_height="34dp"
            android:id="@+id/lbNombre2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.41" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/pHUrlD"
            android:layout_width="122dp"
            android:layout_height="75dp"
            android:id="@+id/lbURL" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.539" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/pHVersionApi"
            android:layout_width="99dp"
            android:layout_height="34dp"
            android:id="@+id/lbVersionApi2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.312" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/pHpesoGigas"
            android:layout_width="99dp"
            android:layout_height="66dp"
            android:id="@+id/lbPesoGB2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.185" android:textSize="24sp" android:textColor="@color/blanco"
            android:textStyle="bold"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/lbFecha3" app:layout_constraintBottom_toBottomOf="@+id/lbFecha3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/lbFecha3">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/costo" android:id="@+id/textCosto" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrar" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.917"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/lbNombre2" app:layout_constraintBottom_toBottomOf="@+id/lbNombre2"
            app:layout_constraintStart_toEndOf="@+id/lbNombre2" android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHNombre" android:id="@+id/textNombre" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/lbPesoGB2" app:layout_constraintBottom_toBottomOf="@+id/lbPesoGB2"
            app:layout_constraintStart_toEndOf="@+id/lbPesoGB2" android:layout_marginStart="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHpesoGigas" android:id="@+id/text_GB" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lbVersionApi2" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/lbVersionApi2"
            app:layout_constraintBottom_toBottomOf="@+id/lbVersionApi2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHVersionApi" android:id="@+id/text_Version" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lbURL" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/lbURL"
            app:layout_constraintBottom_toBottomOf="@+id/lbURL" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHUrlD" android:id="@+id/text_URL" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lbFecha2" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/lbFecha2" app:layout_constraintTop_toTopOf="@+id/lbFecha2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pHFecha" android:id="@+id/text_Fecha" android:textColor="@color/blanco"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>